--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "lint-staged": {
     "*.{js,ts,jsx,tsx, html}": [
-      "eslint --cache --fix --max-warnings=100 --format=stylish",
-      "prettier --write"
+      "prettier --write ."
     ],
     "*.{json,css,md}": "prettier --write"
   },
